--- a/ChatApp/ChatApp.csproj
+++ b/ChatApp/ChatApp.csproj
@@ -61,6 +61,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Controller.cs" />
+    <Compile Include="DataBaseSQL.cs" />
     <Compile Include="Model.cs" />
     <Compile Include="View.cs">
       <SubType>Form</SubType>
