Udate-Model+include TCPEndpoint+ include MessageHandler

--- a/ChatApp/ChatApp.csproj
+++ b/ChatApp/ChatApp.csproj
@@ -4,7 +4,7 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{55EF88A1-7374-4BF5-A97F-6FA4B7BCC67A}</ProjectGuid>
+    <ProjectGuid>{5354BB1E-68C5-4ABA-8B0A-FCD6326BF169}</ProjectGuid>
     <OutputType>WinExe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>ChatApp_Schule</RootNamespace>
@@ -48,8 +48,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Controller.cs" />
-    <Compile Include="ControllerLogin.cs" />
+    <Compile Include="Controler.cs" />
     <Compile Include="DataBase.cs" />
     <Compile Include="DataBaseSQLite.cs" />
     <Compile Include="LoginView.cs">
@@ -58,7 +57,9 @@
     <Compile Include="LoginView.Designer.cs">
       <DependentUpon>LoginView.cs</DependentUpon>
     </Compile>
+    <Compile Include="MessageHandler.cs" />
     <Compile Include="Model.cs" />
+    <Compile Include="TCPEndpoint.cs" />
     <Compile Include="View.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -82,7 +83,6 @@
     <EmbeddedResource Include="View.resx">
       <DependentUpon>View.cs</DependentUpon>
     </EmbeddedResource>
-    <None Include="ClassDiagram1.cd" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
